--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
     "wait-on": "^8.0.1"
   },
   "devDependencies": {
-    "concurrently": "^9.1.0"
+    "concurrently": "^9.1.0",
+    "cypress-real-events": "^1.14.0",
+    "puppeteer": "^24.7.2",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2"
   }
 }
