--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,6 @@ node_modules/
 cypress/videos/
 cypress/screenshots/
 irctc-captcha-solver/__pycache__
-cypress/downloads/"cypress.env.json" 
+cypress/downloads/
 cypress.env.json
 .env
